[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std"] }
derive-new = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
