[package]
name = "communication"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20", features = ["std"] }
serde = { version = "1.0.195", features = ["derive"] }
rmp-serde = "1.3.0"
thiserror = "1.0.56"
env_logger = "0.11.1"
smol = "2.0.0"
async-net = "2.0.0"
async-channel = "2.3.1"
async-executor = "1.11.0"
futures-lite = "2.3.0"
